--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
+body {
+    background-color: #2bbed3;
+    color: white;
+    font-family: Helvetica, Arial, Sans-serif;
+    font-size: 40px;
+    font-weight: bold;
+    margin: 0 auto;
+}
+
+.center {
+    margin: 0 auto;
+}
+
+.key-digit {
+    border: 1px solid white;
+    border-radius: 50%;
+    display: inline-block;
+    height: 80px;
+    margin: 10px 10px;
+    text-align: center;
+    width: 80px;
+}
+
+.key-digit:hover {
+    background-color: white;
+    color: #2bbed3;
+}
+
+.line {
+    display: flex;
+    margin: 0 auto;
+    padding: 0;
+}
+
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: te;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
