--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body {
     margin: 0 auto;
 }
 
-.key-digit {
+.circle {
     border: 1px solid white;
     border-radius: 50%;
     display: inline-block;
@@ -21,7 +21,7 @@ body {
     width: 80px;
 }
 
-.key-digit:hover {
+.circle:hover {
     background-color: white;
     color: #2bbed3;
 }
@@ -30,6 +30,21 @@ body {
     display: flex;
     margin: 0 auto;
     padding: 0;
+}
+
+.submit {
+    border: 1px solid white;
+    border-radius: 100px;
+    display: inline-block;
+    height: 75px;
+    margin: 50px 50px;
+    text-align: center;
+    width: 300px;
+}
+
+.submit:hover {
+    background-color: white;
+    color: #2bbed3;
 }
 
 .App {
